fixed journey on ie9

--- a/system/assets/less/elements/journey.less
+++ b/system/assets/less/elements/journey.less
@@ -1,7 +1,14 @@
 .ie9{
     @media (min-width: 768px) {
         .journey{
-            .journey-top-bar{ top: 57px; padding-left: 210px; padding-top: 10px;}
+            .journey-top-bar{ 
+                top: 57px; 
+                padding-left: 210px; 
+                padding-top: 10px;
+                .journey-tab-text{
+                    margin-left: -210px;
+                }
+            }
             .journey-content-container { margin: 103px 0 0 200px !important; }  /* IE9 */
         }
     } // end @media (min-width: 768px)   
